--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,9 @@
   },
   "dependencies": {
     "arweave": "^1.10.23",
+    "arweave-wallet-connector": "^0.0.25",
+    "date-fns": "^2.28.0",
+    "ramda": "^0.28.0",
     "sirv-cli": "^2.0.0"
   }
 }
