--- a/app/package.json
+++ b/app/package.json
@@ -10,12 +10,14 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "daisyui": "^2.11.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "tailwindcss": "^3.0.23",
     "tinro": "^0.6.12"
   },
   "dependencies": {
