--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "svelte": "^3.0.0",
+    "svelte-hash-router": "^1.0.1",
     "tailwindcss": "^3.0.23",
     "tinro": "^0.6.12"
   },
